# MAgNet

./: .gitignore  Literature.md  README.md  docker-compose.yml  main.py  mas_architectures.excalidraw  pyproject.toml  run_chat_agent.py  run_evaluation.py  run_evaluations.py  temp.ipynb  temp_langsmith.py  test.py  test_chat_agent.py  test_supervisor.py
evaluation_results/: benchmark_results_20251010_145955.csv  benchmark_results_20251010_154708.csv  benchmark_results_20251010_160601.csv  benchmark_results_20251010_161145.csv  benchmark_results_20251010_161753.csv  benchmark_results_20251010_162815.csv  benchmark_summary_20251010_145955.json  benchmark_summary_20251010_154708.json  benchmark_summary_20251010_160601.json  benchmark_summary_20251010_161145.json  benchmark_summary_20251010_161753.json  benchmark_summary_20251010_162815.json  crewai_results_20251010_154708.json  crewai_results_20251010_160601.json  crewai_results_20251010_161145.json  crewai_results_20251010_161753.json  crewai_results_20251010_162815.json  langgraph_results_20251010_145955.json  langgraph_results_20251010_154708.json
src/magnet/: __init__.py  agent.py  context.py  custom.py  handoff.py  langgraph.json  lite_agent.py  llm.py  model.py  net.py  nets.py  process.py  run.py  supervisor.py  swarm.py  task.py  tool.py
src/magnet/agent/: client.py  graph.py  nodes.py  parser.py
src/magnet/agents/: README.md  __init__.py  agent.py  constants.py  net_agent_executor.py  parser.py  state.py  tools_handler.py
src/magnet/app/: agent.py  agent_executor.py
src/magnet/cli/: add_net_to_flow.py  cli.py  command.py  config.py  constants.py  create_flow.py  create_net.py  evaluate_net.py  install_net.py  net_chat.py  plus_api.py  provider.py  replay_from_task.py  reset_memories_command.py  run_net.py  train_net.py  update_net.py  utils.py  version.py
src/magnet/configs/: llm_config.py
src/magnet/environments/: __init__.py  base.py  combined.py
src/magnet/evaluation/: evaluator.py  framework_runners.py  metrics.py  task_definitions.py
src/magnet/events/: __init__.py  base_event_listener.py  base_events.py  event_bus.py  event_listener.py  event_types.py
src/magnet/experimental/: __init__.py
src/magnet/flow/: __init__.py  config.py  flow.py  flow_trackable.py  flow_visualizer.py  html_template_handler.py  legend_generator.py  path_utils.py  types.py  visualization_utils.py
src/magnet/graph/: __init__.py  composite_graph.py  graph.py  node.py  swarm.py  visualize.py
src/magnet/knowledge/: knowledge.py
src/magnet/llm/: __init__.py  format.py  gpt4v_chat.py  gpt_chat.py  llm.py  llm_registry.py  mock_llm.py  mock_visual_llm.py  price.py  visual_llm_registry.py
src/magnet/llms/: base_llm.py
src/multi_agent_scale/: main.py  net.py
tests/: check_agents.py  test_a2a_supervisor.py  test_supervisor.py
thesis/: README.md
(+561 files in other folders)
