[project]
name = "magnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "apscheduler>=3.11.0",
    "arxiv>=2.2.0",
    "astunparse>=1.6.3",
    "async-timeout>=5.0.1",
    "bs4>=0.0.2",
    "class-registry>=2.1.2",
    "colorama>=0.4.6",
    "crewai>=0.203.0",
    "datasets>=4.2.0",
    "docx>=0.2.4",
    "fastmcp>=2.12.4",
    "func-timeout>=4.3.5",
    "gradio>=5.49.1",
    "graphviz>=0.21",
    "http-router>=5.0.8",
    "jsonlines>=4.0.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.8",
    "langgraph-supervisor>=0.0.29",
    "langgraph-swarm>=0.0.14",
    "loguru>=0.7.3",
    "markdown>=3.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "phoenix>=0.9.1",
    "psutil>=7.1.0",
    "pylatexenc>=2.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "pytube>=15.0.0",
    "requests>=2.32.5",
    "router>=0.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "shortuuid>=1.0.13",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]
