[project]
name = "magnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "colorama>=0.4.6",
    "crewai>=0.203.0",
    "fastmcp>=2.12.4",
    "google-adk>=1.17.0",
    "gradio>=5.49.1",
    "graphviz>=0.21",
    "http-router>=5.0.8",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.8",
    "langgraph-supervisor>=0.0.29",
    "langgraph-swarm>=0.0.14",
    "langsmith>=0.4.33",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "phoenix>=0.9.1",
    "psutil>=7.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "router>=0.1",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
]
